# CentralBanksMinutesLLM

./: pyproject.toml
data/transformed/: 18_March_2020.txt  1_August_2023.txt  1_December_2020.txt  1_February_2022.txt  1_June_2021.txt  1_March_2022.txt  1_November_2022.txt  1_October_2019.txt  1_September_2020.txt  2_April_2019.txt  2_August_2022.txt  2_February_2021.txt  2_July_2019.txt  2_June_2020.txt  2_March_2021.txt  2_May_2023.txt  2_November_2021.txt  3_August_2021.txt  3_December_2019.txt  3_March_2020.txt  3_May_2022.txt  3_November_2020.txt  3_September_2019.txt  4_April_2023.txt  4_August_2020.txt  4_February_2020.txt  4_July_2023.txt  4_June_2019.txt  4_May_2021.txt  4_October_2022.txt  5_April_2022.txt  5_February_2019.txt  5_July_2022.txt  5_March_2019.txt  5_May_2020.txt  5_November_2019.txt  5_October_2021.txt  5_September_2023.txt  6_April_2021.txt  6_August_2019.txt  (+12 more)
notebooks/: 01_WebScrapingData.ipynb  02_BuildingLlama2Model.ipynb  02_PopulatingVectorStore.ipynb  03_BuildingLlama2Model.ipynb
notebooks/.ipynb_checkpoints/: 01_WebScrapingData-checkpoint.ipynb  02_BuildingLlama2Model-checkpoint.ipynb  02_PopulatingVectorStore-checkpoint.ipynb  Prototype-checkpoint.ipynb
source/: chatapp.py  chatappTRIAL.py  config.py  etlpipeline.py  paths.py  standalonepdfapp.py  webscraper.py
source/.ipynb_checkpoints/: chatapp-checkpoint.py  chatappTRIAL-checkpoint.py  config-checkpoint.py  standalonepdfapp-checkpoint.py  webscraper-checkpoint.py
tests/: 3_October_2006.txt  7_November_2006.txt  Prototype.ipynb  SomeExtraCode.py
(+3 files in other folders)
